# commerce-lens

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  __init__.py  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  monitor.yml
commercelens/: __init__.py
commercelens/alerts/: config.py  delivery.py  rules.py  runner.py
commercelens/api/: auth.py  domain_limits.py  main.py  quota.py
commercelens/cli/: main.py
commercelens/connectors/: datasets.py  stripe.py
commercelens/core/: crawler.py  fetcher.py  monitor.py  renderer.py  urls.py
commercelens/extractors/: adapters.py  availability.py  jsonld.py  listing.py  price.py  product.py
commercelens/intelligence/: __init__.py  price_summary.py
commercelens/jobs/: __init__.py  billing.py  migrations.py  models.py  postgres_store.py  store.py  worker.py
docs/: alerts.md  commercialization.md  hosted_backend.md  production.md  render.md  worker-service.md
examples/: crawl_catalog.py  extract_listing.py  monitor_config.json  products.txt  products_b.csv
scripts/: smoke_deploy.py
tests/: test_accounts_dashboard.py  test_api_health.py  test_benchmarks.py  test_catalog_diff.py  test_connectors_matching.py  test_dashboard_summary.py  test_domain_limits.py  test_exporters.py  test_extraction_records.py  test_fetcher_config.py  test_identity_graph.py  test_jobs.py  test_listing_extractor.py  test_postgres_migrations.py  test_price_intelligence.py  test_price_store.py  test_product_extractor.py  test_stripe_billing.py
(+19 files in other folders)
