[project]
name = "commercelens"
version = "0.3.0"
description = "Open-source product, catalog, and price intelligence extraction for developers."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dipesh Tharu Mahato" }]
license = { text = "MIT" }
keywords = [
  "web-scraping",
  "ecommerce",
  "product-extraction",
  "price-monitoring",
  "crawler",
  "fastapi",
  "schema-org",
  "developer-tools"
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
data = ["pandas>=2.0.0", "pyarrow>=15.0.0"]
llm = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.8.0"]

[project.scripts]
commercelens = "commercelens.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
